tests/typechecker/should_pass/module_with_two_arguments.csp
module m2(z,w)
x=0
exports
y=1
endmodule
--instance im = m2(1,2)
--print im::y
