tests/typechecker/should_fail/infinitely_recursive_instances.csp
module M1(x)

exports
instance M1P = M2(1)
endmodule


module M2(x)

exports
instance M2P = M1(1)
endmodule
